--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300i,400,400i,600,600i,700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Rochester&display=swap');
 
 * {
   font-family: "Source Sans Pro", sans-serif;
@@ -11,7 +12,7 @@
 
 html {
   font-size: 62.5%;
-  background-color: #D6E3E5;
+  background-color: #B7D4D9;
 }
 
 .App {
@@ -21,25 +22,35 @@ html {
 }
 
 h1 {
-  font-size: 8rem;
+  font-size: 6rem;
   letter-spacing: 0.1rem;
-  font-style: italic;
-  color: #b46e40;
-  text-shadow: 0 0.2rem 5rem rgb(119, 115, 115);
-  text-transform: uppercase;
+  font-family: 'Rochester', cursive;
+  color: #825635;
+  text-shadow: 0 0.5rem 1.5rem rgb(53, 52, 52);
+ 
   margin: 4rem 0;
 }
 
+
+h2{
+  font-size: 4rem;
+  letter-spacing: 0.1rem;
+  font-family: 'Rochester', cursive;
+  color: #825635;
+  text-shadow: 0 0.5rem 1.5rem rgb(53, 52, 52);
+ 
+  margin: 4rem 0;
+}
 .search-form {
   width: 60rem;
   height: 10rem;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #d3d3d3;
+  background-color: #dadada;
   border-radius: 0.5rem;
   margin-bottom: 5rem;
-  box-shadow: 1rem 2rem 5rem #aaa;
+  box-shadow: 1rem 2rem 2rem #aaa;
   position: relative;
 }
 
@@ -47,7 +58,7 @@ h1 {
   position: absolute;
   top: -3rem;
   left: 0;
-  background-color: rgb(233, 72, 72);
+  background-color: rgb(233, 171, 72);
   width: calc(100% - 0.4rem);
   border-radius: 0.5rem;
   padding: 0.2rem;
@@ -68,6 +79,7 @@ h1 {
   margin: 0 0.5rem;
   border-radius: 0.5rem;
   height: 3rem;
+  box-shadow: 2rem 3rem 2rem #aaa;
 }
 
 .search-form input[type="text"] {
@@ -79,8 +91,9 @@ h1 {
 .search-form input[type="submit"] {
   width: 25%;
   text-transform: uppercase;
-  background-color: #b48b40;
+  background-color: #3FBACD;
   color: #fff;
+  box-shadow: 2rem 3rem 2rem #aaa;
 }
 
 .recipes {
@@ -101,7 +114,7 @@ h1 {
   padding: 2rem;
   position: relative;
   border-radius: 0.5rem;
-  box-shadow: 2rem 3rem 5rem #aaa;
+  box-shadow: 2rem 3rem 2rem #aaa;
 }
 
 .recipe h2 {
@@ -132,7 +145,7 @@ h1 {
   font-size: 2rem;
   text-transform: uppercase;
   color: #fff;
-  background-color: #b48b40;
+  background-color: #3FBACD;
   border: none;
   border-radius: 0.5rem;
   height: 3rem;
@@ -157,4 +170,15 @@ h1 {
 .ingredient-weight {
   color: #645f19;
   font-size: 1.3rem;
+}
+
+li.food-list{
+ 
+}
+
+ul.food-list{
+  color: #645f19;
+  font-size: 2rem;
+ 
+ 
 }
