--- a/src/App.css
+++ b/src/App.css
@@ -22,12 +22,11 @@ html {
 }
 
 h1 {
-  font-size: 6rem;
-  letter-spacing: 0.1rem;
+  font-size: 7rem;
+  letter-spacing: 0.3rem;
   font-family: 'Rochester', cursive;
   color: #825635;
   text-shadow: 0 0.5rem 1.5rem rgb(53, 52, 52);
- 
   margin: 2rem  0;
 }
 
@@ -148,7 +147,7 @@ h2{
   background-color: #3FBACD;
   border: none;
   border-radius: 0.5rem;
-  height: 3rem;
+  height: 4rem;
 }
 
 .ingredient-list {
@@ -183,7 +182,7 @@ ul.food-list{
 
 .container-cover {
   width: 100%;
-  height: 350px;
+  height: -100px;
   position: relative;
 
  
@@ -214,4 +213,5 @@ img{
 button{
   margin: 10px;
   padding: 10px 20px;
+  background-color: #b48b40;
 }
