--- a/src/App.css
+++ b/src/App.css
@@ -183,10 +183,8 @@ ul.food-list{
 
 .container-cover {
   width: 100%;
-  height: 350px;
+  height: -100px;
   position: relative;
-
- 
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -213,5 +211,24 @@ img{
 
 button{
   margin: 10px;
-  padding: 10px 20px;
+  padding: px 20px;
+}
+
+
+@media screen and (max-width: 500px) {
+  h1 {
+    font-size: 4rem;
+  }
+  .search-form {
+    width: 30rem;
+    height: 8rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #dadada;
+    border-radius: 0.5rem;
+    margin-bottom: 5rem;
+    box-shadow: 1rem 2rem 2rem #aaa;
+    position: relative;
+  }
 }
